--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,1 +1,5 @@
-$primary-blue: #4c60d0;
+$primary-blue:hsl(231, 69%, 60%);
+$primary-red: hsl(0, 94%, 66%);
+$grayish-blue: hsl(229, 8%, 60%);
+$dark-blue: hsl(229, 31%, 21%);
+$white: hsl(0, 0%, 100%);
