--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -4,4 +4,367 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
+
+body {
+  font-size: 18px;
+  font-family: 'Rubik', sans-serif;
+}
+
+nav {
+  height: 15vh;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.nav-logo {
+  max-height: 20px;
+  margin-left: 10%;
+}
+
+.nav-hamburger {
+  max-height: 15px;
+  margin-right: 10%;
+}
+
+.description {
+  text-align: center;
+  color: #9194a1;
+  font-size: 0.9rem;
+  margin: 20px auto;
+  line-height: 1.4rem;
+  max-width: 600px;
+}
+
+.mid-title {
+  font-size: 1.2rem;
+  text-align: center;
+}
+
+.btn {
+  background: #5368df;
+  border: none;
+  padding: 10px 15px;
+  border-radius: 5px;
+  color: white;
+  font-size: 0.75rem;
+  -webkit-box-shadow: 2px 2px 0.5rem #9194a1;
+          box-shadow: 2px 2px 0.5rem #9194a1;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.btn-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: auto;
+  width: 90%;
+}
+
+.hero {
+  padding-top: 30px;
+  width: 100%;
+  min-height: 85vh;
+  margin-bottom: 30px;
+}
+
+.hero-container {
+  position: relative;
+}
+
+.hero-illustration {
+  display: block;
+  margin: auto;
+  max-width: 80%;
+  max-height: 300px;
+  aspect-ratio: 3 / 2;
+}
+
+.hero-background {
+  background: #5368df;
+  aspect-ratio: 3 / 2;
+  width: 70%;
+  max-height: 200px;
+  position: absolute;
+  top: 30%;
+  right: 0%;
+  z-index: -1;
+  border-radius: 0px 0px 0px 70px;
+}
+
+.hero-title {
+  text-align: center;
+  margin-top: 50px;
+}
+
+.btn-firefox {
+  background: #9194a1;
+  margin-left: 5%;
+  color: #292929;
+}
+
+.features {
+  width: 100%;
+  margin-top: 70px;
+  margin-bottom: 100px;
+}
+
+.features-btn-container {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.features-btn {
+  background: transparent;
+  border: none;
+  padding: 15px;
+  font-size: 1rem;
+  color: #4f4f4f;
+  cursor: pointer;
+  font-weight: 500;
+  outline: none;
+}
+
+.features-btn:hover, .features-btn:focus {
+  border-bottom: 3px solid #fa5757;
+}
+
+.border {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 90%;
+  margin: auto;
+  border-top: 1px solid #9194a1;
+  border-bottom: 1px solid #9194a1;
+}
+
+.features-container {
+  margin-top: 70px;
+  position: relative;
+}
+
+.feat-tab img {
+  display: block;
+  margin: auto;
+  max-width: 80%;
+  max-height: 300px;
+  aspect-ratio: 3 / 2;
+}
+
+.tab2, .tab3 {
+  display: none;
+}
+
+.feat-tab .mid-title {
+  margin-top: 100px;
+}
+
+.feat-background {
+  background: #5368df;
+  aspect-ratio: 4 / 3;
+  width: 60%;
+  max-height: 250px;
+  position: absolute;
+  top: 15%;
+  left: 0%;
+  z-index: -1;
+  border-radius: 0px 0px 70px 0px;
+}
+
+.download {
+  width: 100%;
+  margin-bottom: 100px;
+}
+
+.card {
+  width: 80%;
+  max-width: 270px;
+  min-height: 350px;
+  margin: 50px auto;
+  -webkit-box-shadow: 0 7px 0.6rem #e4e2e2;
+          box-shadow: 0 7px 0.6rem #e4e2e2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-radius: 10px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.card .browser-logo {
+  width: 80px;
+  margin: 30px;
+}
+
+.card img {
+  margin-top: 15px;
+  width: 100%;
+}
+
+.card .btn {
+  margin: 25px;
+}
+
+.faq {
+  width: 90%;
+  margin: 0 auto;
+  margin-bottom: 100px;
+}
+
+.faq .btn {
+  display: block;
+  margin: auto;
+  padding: 18px 25px;
+}
+
+.faq-container {
+  margin: 50px auto;
+}
+
+.faq-item {
+  border-bottom: 1px solid #9194a1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.faq-item h4 {
+  padding: 15px;
+  padding-left: 0;
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.subscribe {
+  background: #5368df;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 50px;
+}
+
+.subscribe .mid-title {
+  color: white;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+
+.subscribe .info {
+  text-align: center;
+  padding: 20px;
+  color: white;
+  text-transform: uppercase;
+  letter-spacing: 7px;
+  font-size: 0.7rem;
+  font-weight: 500;
+}
+
+.email {
+  height: 40px;
+  width: 100%;
+  border-radius: 10px;
+  border: none;
+  margin: 10px auto;
+  padding-left: 20px;
+}
+
+.email::-webkit-input-placeholder {
+  color: #9194a1;
+}
+
+.email:-ms-input-placeholder {
+  color: #9194a1;
+}
+
+.email::-ms-input-placeholder {
+  color: #9194a1;
+}
+
+.email::placeholder {
+  color: #9194a1;
+}
+
+.contact-btn {
+  background: #fa5757;
+  border-radius: 10px;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+footer {
+  width: 100%;
+  min-height: 40vh;
+  background: #252b46;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: white;
+  padding: 50px 0 50px 0;
+}
+
+footer p {
+  margin-top: 30px;
+  text-transform: uppercase;
+  font-size: 1rem;
+}
+
+.social {
+  margin-top: 30px;
+  width: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+ul {
+  list-style: none;
+}
 /*# sourceMappingURL=styles.css.map */
