--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,3 +5,290 @@
     padding: 0;
     box-sizing: border-box;
 }
+body {
+    font-size: 18px;
+    font-family: 'Rubik', sans-serif;
+}
+// nav styles 
+nav {
+    height: 15vh;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.nav-logo {
+    max-height: 20px;
+    margin-left: 10%;
+}
+.nav-hamburger {
+    max-height: 15px;
+    margin-right: 10%;
+}
+
+// reusable classes
+.description {
+    text-align: center;
+    color: $grayish-blue;
+    font-size: 0.9rem;
+    margin: 20px auto;
+    line-height: 1.4rem;
+    max-width: 600px;
+    
+}
+.mid-title {
+    font-size: 1.2rem;
+    text-align: center;
+
+}
+.btn {
+    background: $primary-blue;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 5px;
+    color: $white;
+    font-size: 0.75rem;
+    box-shadow: 2px 2px 0.5rem $grayish-blue;
+    font-weight: bold;
+    cursor: pointer;
+}
+.btn-container{
+    display: flex;
+   justify-content: center;
+    margin: auto;
+    width: 90%;
+    
+}
+
+// hero 
+.hero {
+    padding-top: 30px;
+    width: 100%;
+    min-height: 85vh;
+    margin-bottom: 30px;
+
+}
+.hero-container{
+    position: relative;
+}
+.hero-illustration {
+    display: block;
+    margin: auto;
+    max-width: 80%;
+    max-height: 300px;
+    aspect-ratio:  3 / 2;
+}
+.hero-background{
+    background: $primary-blue;
+    aspect-ratio:  3 / 2;
+    width: 70%;
+    max-height: 200px;
+    position: absolute;
+    top: 30%;
+    right: 0%;
+    z-index: -1;
+    border-radius: 0px 0px 0px 70px;
+}
+
+.hero-title {
+    text-align: center;
+    margin-top: 50px;
+}
+
+.btn-firefox{
+    background: $grayish-blue;
+    margin-left: 5%;
+    color: rgb(41, 41, 41);
+}
+
+// features
+.features {
+    width: 100%;
+    margin-top: 70px;
+    margin-bottom: 100px;
+}
+
+.features-btn-container{
+    flex-direction: column;
+
+}
+.features-btn {
+    background: transparent;
+    border: none;
+    padding: 15px;
+    font-size: 1rem;
+    color: #4f4f4f;
+    cursor: pointer;
+    font-weight: 500;
+    outline: none;
+    &:hover, &:focus {
+        border-bottom: 3px solid $primary-red;
+    }
+}
+.border {
+    display: flex;
+    justify-content: center;
+    width: 90%;
+    margin: auto;
+    border-top: 1px solid $grayish-blue;
+    border-bottom: 1px solid $grayish-blue;
+}
+.features-container {
+    margin-top: 70px;
+    position: relative;
+}
+.feat-tab img{
+    display: block;
+    margin: auto;
+    max-width: 80%;
+    max-height: 300px;
+    aspect-ratio:  3 / 2;
+}
+.tab2, .tab3 {
+    display: none;
+}
+.feat-tab .mid-title {
+    margin-top: 100px;
+}
+
+.feat-background {
+    background: $primary-blue;
+    aspect-ratio:  4 / 3;
+    width: 60%;
+    max-height: 250px;
+    position: absolute;
+    top: 15%;
+    left: 0%;
+    z-index: -1;
+    border-radius: 0px 0px 70px 0px;
+}
+
+// download
+.download {
+    width: 100%;
+    margin-bottom: 100px;
+
+}
+.card {
+    width: 80%;
+    max-width: 270px;
+    min-height: 350px;
+    margin: 50px auto;
+    box-shadow: 0 7px 0.6rem rgb(228, 226, 226);
+    display: flex;
+    border-radius: 10px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    .browser-logo {
+        width: 80px;
+        margin: 30px;
+    }
+    img {
+        margin-top: 15px;
+        width: 100%;
+    }
+    .btn {
+        margin: 25px;
+    }
+}
+
+// FAQ
+
+.faq {
+    width: 90%;
+    margin: 0 auto;
+    margin-bottom: 100px;
+    
+  .btn {
+      display: block;
+      margin: auto;
+      padding: 18px 25px;
+  }
+}
+.faq-container{
+    margin: 50px auto;
+}
+.faq-item {
+    border-bottom: 1px solid $grayish-blue;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    h4 {
+        padding: 15px;
+        padding-left: 0;
+        font-size: 1rem;
+        font-weight: 500;
+    }
+    
+}
+
+.subscribe {
+    background: $primary-blue;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 50px;
+
+    .mid-title {
+        color: white;
+        font-weight: 500;
+        margin-bottom: 20px;
+    }
+    .info {
+        text-align: center;
+        padding: 20px;
+        color: white;
+        text-transform: uppercase;
+        letter-spacing: 7px;
+        font-size: 0.7rem;
+        font-weight: 500;
+    }
+}
+.email {
+    height: 40px;
+    width: 100%;
+    border-radius: 10px;
+    border: none;
+    margin: 10px auto;
+    padding-left: 20px;
+    &::placeholder {
+        color: $grayish-blue;
+    }
+
+}
+.contact-btn {
+    background: $primary-red;
+    border-radius: 10px;
+    box-shadow: none;
+}
+
+footer {
+    width: 100%;
+    min-height: 40vh;
+    background: $dark-blue;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    color: white;
+    padding: 50px 0 50px 0;
+    p{
+        margin-top: 30px;
+        text-transform: uppercase;
+        font-size: 1rem;
+    }
+}
+
+.social {
+    margin-top: 30px;
+    width: 100px;
+    display: flex;
+    justify-content: space-between;
+    
+}
+ul {
+    list-style: none;
+}
