--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -24,6 +24,7 @@ nav {
 .nav-hamburger {
     max-height: 15px;
     margin-right: 10%;
+    cursor: pointer;
 }
 
 // reusable classes
@@ -68,7 +69,7 @@ nav {
     margin-bottom: 30px;
 
 }
-.hero-container{
+.hero-container-right{
     position: relative;
 }
 .hero-illustration {
@@ -100,6 +101,46 @@ nav {
     margin-left: 5%;
     color: rgb(41, 41, 41);
 }
+
+@media (min-width: 700px) {
+    .hero {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas: "left right";
+        margin-bottom: 0px;
+    }
+    .hero-container-right {
+        grid-area: right;
+    }
+    .hero-container-left {
+        grid-area: left;
+        margin-left: 5%;
+    }
+    .hero-background {
+        top: 20%;
+        max-height: 300px;
+    }
+    .description {
+        text-align: left;
+        font-size: 1rem;
+        line-height: 2rem;
+    }
+    .hero-illustration {
+        max-width: 90%;
+        max-height: 700px;
+    }
+    .hero-title {
+        font-size: 2.5rem;
+        margin-top: 20px;
+    }
+
+}
+@media (min-width: 880px) {
+    .hero-title {
+        margin-top: 70px;
+    }
+}
+
 
 // features
 .features {
@@ -163,6 +204,46 @@ nav {
     border-radius: 0px 0px 70px 0px;
 }
 
+
+@media (min-width: 700px) {
+    .features .description {
+        text-align: center;
+    }
+    .features-btn-container {
+        flex-direction: row;
+        width: 50%;
+    }
+    .border {
+        border-top: none;
+        
+        align-content: baseline;
+    }
+    .feat-tab {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    .tab2, .tab3 {
+        display: none;
+    }
+    .feat-img {
+        max-width: 95%;
+        min-width: 300px;
+        min-height: 250px;
+        max-height: 300px;
+    }
+    .features-tab-content{
+        margin-left: 5%;
+        .mid-title {
+            margin-top: 50px;
+            text-align: left;
+        }
+        .description{
+            text-align: left;
+        }
+    }
+    
+}
+
 // download
 .download {
     width: 100%;
@@ -193,12 +274,32 @@ nav {
         margin: 25px;
     }
 }
+@media (min-width: 700px) {
+    .download {
+        width: 80%;
+        margin: auto;
+    }
+    .download-cards {
+        display: flex;
+        flex-wrap: nowrap;
+        .card {
+            margin: 0 5px;
+            height: 350px;
+        }
+        .card-firefox {
+            margin-top: 40px;
+        }
+        .card-opera {
+            margin-top: 80px;
+        }
+    }
+}
 
 // FAQ
 
 .faq {
     width: 90%;
-    margin: 0 auto;
+    margin: 50px auto;
     margin-bottom: 100px;
     
   .btn {
@@ -224,6 +325,11 @@ nav {
     }
     
 }
+@media (min-width: 700px){
+    .faq {
+        width: 50%;
+    }
+}
 
 .subscribe {
     background: $primary-blue;
@@ -237,6 +343,7 @@ nav {
         font-weight: 500;
         margin-bottom: 20px;
     }
+
     .info {
         text-align: center;
         padding: 20px;
@@ -250,10 +357,12 @@ nav {
 .email {
     height: 40px;
     width: 100%;
+    max-width: 400px;
     border-radius: 10px;
     border: none;
     margin: 10px auto;
     padding-left: 20px;
+
     &::placeholder {
         color: $grayish-blue;
     }
@@ -263,6 +372,9 @@ nav {
     background: $primary-red;
     border-radius: 10px;
     box-shadow: none;
+    max-width: 400px;
+    width: 100%;
+    margin: auto;
 }
 
 footer {
@@ -279,6 +391,7 @@ footer {
         margin-top: 30px;
         text-transform: uppercase;
         font-size: 1rem;
+        cursor: pointer;
     }
 }
 
@@ -291,4 +404,13 @@ footer {
 }
 ul {
     list-style: none;
+    cursor: pointer;
+}
+@media (min-width: 700px) {
+    footer{
+        max-height: 100px;
+        flex-direction: row;
+        padding: 0;
+    }
+   
 }
